--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -165,7 +165,7 @@
                                 <label for="memorySize">内存大小(GB):</label>
                             </div>
                             <div class="input-row">
-                                <input type="number" id="memorySize" min="1" value="128" />
+                                <input type="number" id="memorySize" min="1" value="1024" />
                             </div>
                             <small class="form-hint">每台服务器的内存大小，单位GB</small>
                         </div>
@@ -255,6 +255,7 @@
                                         <input type="number" class="vm-count" min="0" value="300" />
                                     </div>
                                 </div>
+                                <small class="form-hint">CPU核数、内存大小、存储大小和虚机数量 <button type="button" class="remove-vm-type-btn" onclick="DesktopVmManager.removeVmType('B')">删除</button></small>
                             </div>
                             <div class="desktop-vm-type" data-type="C">
                                 <div class="vm-type-title">
@@ -278,6 +279,7 @@
                                         <input type="number" class="vm-count" min="0" value="200" />
                                     </div>
                                 </div>
+                                <small class="form-hint">CPU核数、内存大小、存储大小和虚机数量 <button type="button" class="remove-vm-type-btn" onclick="DesktopVmManager.removeVmType('C')">删除</button></small>
                             </div>
                         </div>
                         <div class="form-group">
