--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -17,7 +17,7 @@
             <h2>网络服务处视频交付科</h2>
             <form id="params-form">
                 <div class="container">
-                    <fieldset>
+                    <fieldset class="core-architecture">
                         <legend>核心架构</legend>
                         <div class="form-group">
                             <label for="isNetCombined">管理/业务网合设:</label>
@@ -171,7 +171,7 @@
                         </div>
                     </fieldset>
 
-                    <fieldset>
+                    <fieldset class="ip-address-pool">
                         <legend>IP地址池</legend>
                         <div class="form-group">
                             <label for="mngIpRange">管理网IP段:</label>
