refactor: redesign CAG portal deployment options and logic
Major Changes:
1. **UI Form Updates**
   - Change deployCAGPortal options from 是/否 to 高可用部署/非高可用部署/否
   - Remove dependency on Insight deployment for CAG portal

2. **VM Generation Logic Refactor**
   - Remove independent CAG portal generation function
   - Integrate CAG portal VMs using Insight CAG portal logic
   - Non-HA: 1 VM (insight_CAG门户01) with 8C16G,200GB+300GB spec
   - HA: 3 VMs (01 main + 02,03 backup) with appropriate specs

3. **Remove Dependency Validations**
   - Delete Insight-CAG portal dependency checks in param-validator.js
   - Remove auto-correction logic in renderer.js
   - CAG portal can now be deployed independently

4. **Update IP Requirements Calculation**
   - Modify generator.js to use new deployCAGPortal values
   - Support 高可用部署/非高可用部署/否 options

5. **Test Updates**
   - Update vm-generator.test.js for new CAG portal generation logic
   - Update param-validator.test.js to allow independent CAG deployment
   - All 125 tests pass with new implementation

Technical Details:
- CAG portal VMs now use Insight naming convention (insight_CAG门户XX)
- Main portal: 8C16G,200GB+300GB spec
- Backup portals: 4C8G,200GB+200GB spec
- Maintains IP allocation logic for management/business networks
- Removes obsolete generateCAGPortalVms independent logic

Breaking Changes:
- deployCAGPortal parameter now accepts string values instead of boolean
- CAG portal VMs use different naming and specs than before
- No longer requires Insight deployment to enable CAG portal

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -317,8 +317,9 @@
                             <label for="deployCAGPortal">部署CAG门户:</label>
                             <div class="custom-select-wrapper">
                                 <select id="deployCAGPortal">
-                                    <option value="true">是</option>
-                                    <option value="false" selected>否</option>
+                                    <option value="高可用部署">高可用部署</option>
+                                    <option value="非高可用部署">非高可用部署</option>
+                                    <option value="否" selected>否</option>
                                 </select>
                             </div>
                         </div>
