--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -590,7 +590,7 @@
                                 </div>
                                 <div class="input-row">
                                     <input type="number" id="storCpuCores" min="1" value="32" />
-                                    <input type="number" id="storMemory" min="1" value="1024" />
+                                    <input type="number" id="storMemory" min="1" value="128" />
                                 </div>
                                 <small class="form-hint">每台服务器的CPU核心数和内存大小</small>
                             </div>
@@ -604,6 +604,6 @@
         </div>
 
         <script src="./fluid.js" type="text/javascript"></script>
-        <script src="./renderer.js" type="text/javascript"></script>
+        <script src="./renderer.js" type="module"></script>
     </body>
 </html>
